# panel-compiler

./: .gitignore  README.md  pc.py  pyproject.toml
.github/workflows/: publish.yml
example/: .gitignore  README.md  pc.yaml  subfigures.py
panel_compiler/: __init__.py  cli.py  compiler.py  config.py  dimensions.py  logging_utils.py  output.py  renderers.py
tests/: test_cli.py  test_compile.py  test_compiler_lifecycle.py  test_content_style.py  test_dimensions.py  test_duplicate_yaml_keys.py  test_group_lookup.py  test_ids.py  test_inline_latex_glyphs.py  test_multi_panel_list.py  test_pc_compat.py  test_renderers.py  test_scaling.py
