[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "panel-compiler"
dynamic = ["version"]
description = "Compose SVG figures and LaTeX equations into a panel template"
readme = "README.md"
authors = [
    {name = "Matthias Függer", email = "mfuegger@gmail.com"},
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["pyyaml"]

[project.scripts]
pc = "pc:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["pc.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
